policies/opa/constraint-trusted-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sTrustedRegistry
metadata:
  name: only-acr
spec:
  parameters:
    registries:
      - acroneplatform.azurecr.io/
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
    namespaces: [apps]
