policies/opa/constrainttemplate-required-resources.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources
        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not c.resources.requests.cpu
          msg := sprintf("container %v missing resources.requests.cpu", [c.name])
        }
        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not c.resources.limits.memory
          msg := sprintf("container %v missing resources.limits.memory", [c.name])
        }
